@@ -54,6 +54,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|conf
+operator|.
+name|Configuration
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|mount
 operator|.
 name|MountdBase
@@ -211,6 +225,12 @@ specifier|final
 name|RpcProgram
 name|rpcProgram
 decl_stmt|;
+DECL|field|nfsPort
+specifier|private
+specifier|final
+name|int
+name|nfsPort
+decl_stmt|;
 DECL|method|getMountBase ()
 specifier|public
 name|MountdBase
@@ -230,6 +250,57 @@ block|{
 return|return
 name|rpcProgram
 return|;
+block|}
+DECL|method|Nfs3Base (MountdBase mountd, RpcProgram program, Configuration conf)
+specifier|protected
+name|Nfs3Base
+parameter_list|(
+name|MountdBase
+name|mountd
+parameter_list|,
+name|RpcProgram
+name|program
+parameter_list|,
+name|Configuration
+name|conf
+parameter_list|)
+block|{
+name|this
+operator|.
+name|mountd
+operator|=
+name|mountd
+expr_stmt|;
+name|this
+operator|.
+name|rpcProgram
+operator|=
+name|program
+expr_stmt|;
+name|this
+operator|.
+name|nfsPort
+operator|=
+name|conf
+operator|.
+name|getInt
+argument_list|(
+literal|"nfs3.server.port"
+argument_list|,
+name|Nfs3Constant
+operator|.
+name|PORT
+argument_list|)
+expr_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"NFS server port set to: "
+operator|+
+name|nfsPort
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|Nfs3Base (MountdBase mountd, RpcProgram program)
 specifier|protected
@@ -253,6 +324,14 @@ operator|.
 name|rpcProgram
 operator|=
 name|program
+expr_stmt|;
+name|this
+operator|.
+name|nfsPort
+operator|=
+name|Nfs3Constant
+operator|.
+name|PORT
 expr_stmt|;
 block|}
 DECL|method|start (boolean register)
@@ -304,9 +383,7 @@ init|=
 operator|new
 name|SimpleTcpServer
 argument_list|(
-name|Nfs3Constant
-operator|.
-name|PORT
+name|nfsPort
 argument_list|,
 name|rpcProgram
 argument_list|,
